# despacho-laboral

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  data.json  entrypoint.sh  main.py  pasos-conciliacion.txt  pyproject.toml  requirements.txt  verify_conciliacion.py
accounts/: admin.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_userprofile_puede_generar_documentos.py  0003_permisoauditlog.py  0004_alter_permisoauditlog_accion.py  0005_alter_userprofile_rol.py
config/: celery.py  settings.py  urls.py
core/: __init__.py
core/laboral/: __init__.py  calculators.py  formulas.py  (+1 more)
demandas/: Demanda ARELY ABIGAIL GUZMAN MUÑIZ VS FISICO.docx  Demanda FEDERAL FELIPE DE JESUS SERRANO FLORES.docx  Demanda JOSE MIGUEL MARTINEZ MORALES VS CENTRAL DETALLISTA.docx  Demanda MARIA ELENA RODRIGUEZ BALLESTEROS VS BIRRIERIA EL TORO LA CABAÑA.docx  Demanda PAULIMA GUADALUPE GALINDO ARELLANO VS CORRUGADOS DE BAJA CALIFORNIA S DE RL DE CV.docx  Demanda TIMOTHY CORTEZ CRUZ.docx  DemandaARMANDO RODRIGUEZ TIERRABLANCA VS PANWEBERS.docx  Juan Carlos Ocampo Bustos vs Tiendas Soriana.docx  Sheila Cassandra Camacho Davalos vs Sams Club.docx
deploy/: deploy.sh  gunicorn.service  nginx.conf  setup_droplet.sh
expedientes/: admin.py  apps.py  conciliacion_automation.py  context_processors.py  demanda_generator.py  forms.py  laboral_calculator.py  marcadores.py  models.py  signals.py  tasks.py  urls.py  views.py  whatsapp.py
finanzas/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
templates/: base.html
(+94 files in other folders)
