[project]
name = "despacho-laboral"
version = "1.0.0"
description = "Sistema de Gestión para Despacho Laboral"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django>=5.0,<6.0",
    "django-htmx>=1.17",
    "django-crispy-forms>=2.1",
    "crispy-tailwind>=1.0",
    "django-environ>=0.11",
    "psycopg2-binary>=2.9",
    "weasyprint>=62",
    "openpyxl>=3.1",
    "Pillow>=10",
    "python-dateutil>=2.8",
    "python-docx>=1.2.0",
    "playwright>=1.60.0",
    "gunicorn>=22.0",
]

[project.scripts]
despacho = "manage:main"
